# rconvolve

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: apply_reverb.rs  realtime_reverb.rs  simple_wav_to_ir.rs
src/: convolve.rs  deconvolve.rs  lib.rs  sweep.rs  utils.rs  wasm.rs
static/: index.html  rconvolve.d.ts  rconvolve.js  rconvolve_bg.wasm  rconvolve_bg.wasm.d.ts  styles.css
static/js/: app.js  audio-utils.js  devices.js  ir-extraction.js  ir-loader.js  realtime.js  recording.js  state.js  sweep.js  visualization.js  wav-encoder.js
